--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,26 +1,31 @@
 name: Generate Snake Animation
+
 on:
   schedule:
-    - cron: "0 0 * **"  # 毎日深夜に実行
+    - cron: "0 0 * * *"  # 毎日深夜に実行
   workflow_dispatch:     # 手動実行も可能
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       # リポジトリのコンテンツをチェックアウト
-      - uses: actions/checkout@v2
-
+      - uses: actions/checkout@v3
+      
       # スネークアニメーションを生成
-      - uses: Platane/snk@master
+      - uses: Platane/snk/svg-only@v3
         id: snake-gif
         with:
           github_user_name: KeiAzDev
-          svg_out_path: dist/github-contribution-grid-snake.svg
-
-      # 生成したファイルをoutputブランチにプッシュ
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+      
+      # 生成したファイルをコミット
+      - name: Push to output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
