--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -1,17 +1,20 @@
-name: Update Recent Activity
+name: Waka Readme
+
 on:
   schedule:
-    - cron: '*/30 * * * *' # 30分ごとに実行
-  workflow_dispatch:        # 手動実行も可能
+    - cron: '0 0 * * *' # 毎日深夜に実行
+  workflow_dispatch:     # 手動実行も可能
+
 jobs:
-  build:
+  update-readme:
+    name: Update Readme with Metrics
     runs-on: ubuntu-latest
-    name: Update Profile README with recent activity
-    
     steps:
-      - uses: actions/checkout@v2
-      - uses: jamesgeorge007/github-activity-readme@master
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - uses: anmol098/waka-readme-stats@master
         with:
-          MAX_LINES: 5
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          USERNAME: KeiAzDev
+          SHOW_PROJECTS: "False"
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_TOTAL_CODE_TIME: "True"
