--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -1,20 +1,19 @@
-name: Waka Readme
+name: Update Recent Activity
 
 on:
   schedule:
-    - cron: '0 0 * * *' # 毎日深夜に実行
-  workflow_dispatch:     # 手動実行も可能
+    - cron: '*/30 * * * *'  # 30分ごとに実行
+  workflow_dispatch:        # 手動実行も可能
 
 jobs:
-  update-readme:
-    name: Update Readme with Metrics
+  build:
     runs-on: ubuntu-latest
+    name: Update Profile README with recent activity
+    
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: actions/checkout@v2
+      - uses: jamesgeorge007/github-activity-readme@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          USERNAME: KeiAzDev
-          SHOW_PROJECTS: "False"
-          SHOW_LINES_OF_CODE: "True"
-          SHOW_TOTAL_CODE_TIME: "True"
+          MAX_LINES: 5
