--- a/.github/workflows/waka-stats.yml
+++ b/.github/workflows/waka-stats.yml
@@ -1,20 +1,20 @@
-name: Waka Readme
+# name: Waka Readme
 
-on:
-  schedule:
-    - cron: '0 0 * * *' # 毎日深夜に実行
-  workflow_dispatch:     # 手動実行も可能
+# on:
+#   schedule:
+#     - cron: '0 0 * * *' # 毎日深夜に実行
+#   workflow_dispatch:     # 手動実行も可能
 
-jobs:
-  update-readme:
-    name: Update Readme with Metrics
-    runs-on: ubuntu-latest
-    steps:
-      - uses: anmol098/waka-readme-stats@master
-        with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          USERNAME: KeiAzDev
-          SHOW_PROJECTS: "False"
-          SHOW_LINES_OF_CODE: "True"
-          SHOW_TOTAL_CODE_TIME: "True"
+# jobs:
+#   update-readme:
+#     name: Update Readme with Metrics
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: anmol098/waka-readme-stats@master
+#         with:
+#           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+#           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+#           USERNAME: KeiAzDev
+#           SHOW_PROJECTS: "False"
+#           SHOW_LINES_OF_CODE: "True"
+#           SHOW_TOTAL_CODE_TIME: "True"
